--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -9,7 +9,7 @@
 
 
 .header__logo img{
-    width: 200px;
+    width: 100%;
 }
 
 
@@ -51,15 +51,16 @@ header .header__burger{
 .header__localizacion{
     display: none;
 }
-@media(min-width: 768px){
+@media(min-width: 426px){
     .header{
         flex-direction: column;
         background-color: var(--transparencia);
     }
     .header__container{
+        width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-evenly;
     }
 
     .header__logo{
@@ -84,6 +85,9 @@ header .header__burger{
         border-radius: 19px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
+    .header .header__burger{
+        display: none;
+    }
 
     .header__busqueda .barra__lupa{
         margin-left: 5px;
@@ -93,8 +97,7 @@ header .header__burger{
 
     .header__user{
         display: flex;
-        align-items: center;
-        margin-right: 5%;        
+        align-items: center;        
     }
     .header__user a{
         height: 36px;
@@ -125,7 +128,7 @@ header .header__burger{
     .header__opciones ul{
         display: flex;
         flex-direction: row;
-        background-color: var(--verdeClaro);
+        background-color: #7FA794;
         border-radius: 19px;
         width: 100%;
         justify-content: space-around;
@@ -143,7 +146,7 @@ header .header__burger{
     }
 }
 
-@media(min-width: 1024px){
+@media(min-width: 768px){
 
     .header__nav{
         justify-content: space-between;
@@ -157,7 +160,8 @@ header .header__burger{
     }
 
     .header__localizacion a{
-        background-color: var(--verdeClaro);
+        background-color: #7FA794;
+        text-align: center;
         width: 50%;
         height: 100%;
         display: flex;
@@ -172,7 +176,7 @@ header .header__burger{
     }
 
     .header__iconos a{
-        background-color: white;
+        background-color: var(--VerdeClaro-Opaco);
         margin-right: 2px;
         height: 40px;
         display: flex;
