--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/5a8fb06a25.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 
