--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -1,8 +1,8 @@
-body.home{
+/*body.home{
     background-image: url('/images/background-mobile-home.png');
     background-size: cover;
     background-repeat: no-repeat;
-}
+}*/
 
 .home .carrusel__home{
     width: 100%;
