--- a/site_ViveBio/public/css/general.css
+++ b/site_ViveBio/public/css/general.css
@@ -2,14 +2,38 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family:'Open Sans', sans-serif;
 }
 
 a{
     text-decoration: none;
-    color: black;
+    color: white;
+    text-shadow: 0 0 2px black;
+
 }
 
 li{
     list-style: none;
 }
 
+h1{
+    color: white;
+    text-shadow: 0 0 2px black;
+}
+
+p{
+    color: white;
+    text-shadow: 0 0 2px black;
+}
+
+h3{
+    color: white;
+    text-shadow: 0 0 2px black;
+}
+body{
+    background-image: url(/images/background-desktop-home.png);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+
+ }
