--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -1,6 +1,65 @@
-.register main{
-    /*margin: 0;
-    padding: 0;*/
-    background-image: url(/images/background-mobile-home.png);
-    height: 100%;
+.register main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header_register {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header_register img {
+    width: 100px;
+}
+
+.container {
+    width: 270px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgb(161, 206, 152);
+    padding: 20px;
+}
+
+.box_1 {
+    font-size: 12px;
+}
+
+.box_2 {
+    font-size: 10px;
+    text-align: end;
+}
+
+.box_introduccion {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.register_form-box {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.register_form-input{
+    width: 100%;
+    margin: 5px 0 5px;
+    padding: 10px 5px;
+    border-radius: 10px;
+    border: 1px solid green;
+}
+
+
+.register h1{
+    padding: 10px 0 10px;
+    color: black;
+    text-align: center;
+    letter-spacing: 5px;
+}
+
+.register label{
+    font-size: 10px;
 }
