--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -4,81 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
 
-<body class="register" style="background-image: url(/images/Background-Register-Login.jpg)">
+<body class="register"
+    style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
+    <header class="header_register">
+        <img src="/images/logo.png" alt="">
+    </header>
     <main>
-        <section>
-            <h1>Bienvenido</h1>
-            <hr>
+        <section class="container">
+            <div class="box_introduccion">
+                <div class="box_1">
+                    <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
+                    <p style="color: rgb(102, 212, 102);text-shadow: 1px 1px 2px black;">ViveBio</p>
+                </div>
+                <div class="box_2">
+                    <p style="text-shadow: 1px 1px 2px black;">Ya tenés cuenta?</p>
+                    <a style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Logueate!</a>
+                </div>
+            </div>
+            <h1>Register</h1>
             <form action="">
                 <article>
-                    <div class="register__form-box">
-                        <label for="nombre">Nombre</label>
-                        <input class="register__form-input" type="text" id="nombre" name="nombre"
-                            placeholder="Escribí tu nombre">
-                        <span class="register__text-error">Obligatorio</span>
+                    <div class="register_form-box">
+                        <label for="email">E-mail</label>
+                        <input class="register_form-input" type="email" id="email" name="email" placeholder="Ingresa tu email">
                     </div>
-                    <div class="register__form-box">
-                        <label for="email">Email</label>
-                        <input class="register__form-input" type="email" id="email" name="email"
-                            placeholder="Escribí tu email">
-                        <span class="register__text-error">Obligatorio</span>
+                    <div class="register_form-box">
+                        <label for="user">Usuario</label>
+                        <input class="register_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario">
                     </div>
-                    <div class="register__form-box">
+                    <div class="register_form-box">
                         <label for="password">Contraseña</label>
-                        <input class="register__form-input" type="password" id="password" name="password"
-                            placeholder="Escribí tu contraseña">
-                        <span class="register__text-error">Obligatorio</span>
+                        <input class="register_form-input" type="password" id="password" name="password" placeholder="Ingresa tu contraseña">
                     </div>
-                    <div class="register__form-box">
-                        <h4>País de nacimiento</h4>
-                        <div>
-                            <select class="register__form-select" name="pais" id="pais">
-                                <option value="" hidden selected>Por favor elegí uno...</option>
-                                <option value="ar">Argentina</option>
-                                <option value="br">Brasil</option>
-                                <option value="uy">Uruguay</option>
-                            </select>
-                            <span class="register__text-error">Obligatorio</span>
-                        </div>
-                    </div>
-                    <div class="register__form-box">
-                        <h4>Género</h4>
-                        <div class="register__radio-box">
-                            <input class="" type="radio" name="genero" id="masculino" value="m">
-                            <label for="masculino">Masculino</label>
-                        </div>
-                        <div class="register__radio-box">
-                            <input class="" type="radio" name="genero" id="femenino" value="f">
-                            <label for="femenino">Femenino</label>
-                        </div>
-                        <div class="register__radio-box">
-                            <input class="" type="radio" name="genero" id="nodice" value="n">
-                            <label for="nodice">Prefiero no decirlo</label>
-                        </div>
-                    </div>
-                    <div class="register__form-box">
-                        <h4>Hobbies</h4>
-                        <div class="register__radio-box">
-                            <input class="" type="checkbox" name="hobbies" id="guitarra" value="g">
-                            <label for="guitarra">Guitarra</label>
-                        </div>
-                        <div class="register__radio-box">
-                            <input class="" type="checkbox" name="hobbies" id="futbol" value="f">
-                            <label for="futbol">Fútbol</label>
-                        </div>
-                        <div class="register__radio-box">
-                            <input class="" type="checkbox" name="hobbies" id="tenis" value="t">
-                            <label for="tenis">Tenis</label>
-                        </div>
-                        <div class="register__radio-box">
-                            <input class="" type="checkbox" name="hobbies" id="programacion" value="p">
-                            <label for="programacion">Programación</label>
-                        </div>
+                    <div class="register_form-box">
+                        <label for="password2">Repite tu contraseña</label>
+                        <input class="register_form-input" type="password" id="password2" name="password2" placeholder="Ingresa tu contraseña">
                     </div>
                 </article>
             </form>
