--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -21,7 +21,7 @@
                 <img src="/images/Lupa.png" alt="" class="barra__lupa">
             </div>
             <div class="header__user">
-                <a>
+                <a href="/login">
                     <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                     <p>Usuario</p>
                 </a>
