--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
 </head>
-<body>
-    <h1>LOGIN</h1>
+
+<body class="login"
+    style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
+    <header class="header_login">
+        <img src="/images/logo.png" alt="">
+    </header>
+    <main>
+        <section class="container">
+            <div class="box_introduccion">
+                <div class="box_1">
+                    <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
+                    <p style="color: rgb(102, 212, 102);text-shadow: 1px 1px 2px black;">ViveBio</p>
+                </div>
+                <div class="box_2">
+                    <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
+                    <a href="/register" style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Registrate!</a>
+                </div>
+            </div>
+            <h1>Login</h1>
+            <form action="">
+                <article>
+                    <div class="register_form-box">
+                        <label for="user">Usuario</label>
+                        <input class="register_form-input" type="user" id="user" name="user"
+                            placeholder="Ingresa usuario">
+                    </div>
+                    <div class="register_form-box">
+                        <label for="password">Contraseña</label>
+                        <input class="register_form-input" type="password" id="password" name="password"
+                            placeholder="Ingresa tu contraseña">
+                    </div>
+                </article>
+                </div>
+                </div>
+                <div class="register_center">
+                <div class="register_button">
+                    <button type="submit">Enviar</button>
+                </div>
+            </div>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
