--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -24,29 +24,44 @@
                 </div>
                 <div class="box_2">
                     <p style="text-shadow: 1px 1px 2px black;">Ya tenés cuenta?</p>
-                    <a style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Logueate!</a>
+                    <a href="/login" style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Logueate!</a>
                 </div>
             </div>
-            <h1>Register</h1>
+            <h1>Registro</h1>
             <form action="">
                 <article>
                     <div class="register_form-box">
                         <label for="email">E-mail</label>
-                        <input class="register_form-input" type="email" id="email" name="email" placeholder="Ingresa tu email">
+                        <input class="register_form-input" type="email" id="email" name="email"
+                            placeholder="Ingresa tu email">
                     </div>
                     <div class="register_form-box">
                         <label for="user">Usuario</label>
-                        <input class="register_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario">
+                        <input class="register_form-input" type="user" id="user" name="user"
+                            placeholder="Ingresa usuario">
                     </div>
                     <div class="register_form-box">
                         <label for="password">Contraseña</label>
-                        <input class="register_form-input" type="password" id="password" name="password" placeholder="Ingresa tu contraseña">
+                        <input class="register_form-input" type="password" id="password" name="password"
+                            placeholder="Ingresa tu contraseña">
                     </div>
                     <div class="register_form-box">
                         <label for="password2">Repite tu contraseña</label>
-                        <input class="register_form-input" type="password" id="password2" name="password2" placeholder="Ingresa tu contraseña">
+                        <input class="register_form-input" type="password" id="password2" name="password2"
+                            placeholder="Ingresa tu contraseña">
                     </div>
                 </article>
+                </div>
+                </div>
+                <div class="register_center">
+                <div class="register_terminos">
+                    <input class="" type="checkbox" name="terminos" id="terminos">
+                    <label for="terminos">Términos y condiciones</label>
+                </div>
+                <div class="register_button">
+                    <button type="submit">Enviar</button>
+                </div>
+            </div>
             </form>
         </section>
     </main>
