Login Responsive Finished

--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -13,7 +13,7 @@
 <body class="register"
     style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
     <header class="header_register">
-        <img src="/images/logo.png" alt="">
+        <a href="/"><img src="/images/logo.png" alt=""></a>
     </header>
     <main>
         <section class="container">
