--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -3,7 +3,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 60px;
+}
+
+.login_video{
+    display: none;
 }
 
 .header_login {
@@ -12,7 +16,7 @@
     align-items: center;
 }
 
-.header_login img {
+.header_login a img {
     width: 150px;
 }
 
@@ -24,36 +28,23 @@
 }
 
 
-/*.container {
-    width: 270px;
-    background-color: rgba(255, 255, 255, 0.8);
+.login_container {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 20px;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     padding: 20px;
+    border: 1px solid green;
+
 }
 
-.box_1 {
-    font-size: 12px;
-}
-
-.box_2 {
-    font-size: 10px;
-    text-align: end;
-}
-
-.box_introduccion {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.register_form-box {
+.login_form-box {
     margin-bottom: 20px;
     margin-top: 20px;
     width: 100%;
 }
 
-.register_form-input{
+.login_form-input {
     width: 100%;
     margin: 5px 0 5px;
     padding: 10px 5px;
@@ -61,33 +52,13 @@
     border: 1px solid green;
 }
 
-
-.register h1{
-    padding: 10px 0 10px;
-    color: black;
-    text-align: center;
-    letter-spacing: 5px;
-}
-
-.register label{
-    font-size: 10px;
-}
-
-.register_center{
+.login_center {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.register_terminos{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content:space-evenly;
-
-}
-
-.register_button{
+.login_button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,13 +66,61 @@
     margin-top: 10px;
 }
 
-.register_button button{
+.login_button button {
     background-color: var(--verdeclaro);
     color: black;
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 5px 10px;
 }
 
-.register_terminos input{
-    box-shadow: 0px 0px 10px rgb(89, 141, 78);
-}*/
+.login label{
+    font-size: 10px;
+}
+
+.login_form-box:first-child{
+    margin-top: 0;
+}
+.login_form-box input{
+    text-align: center;
+}
+
+@media (min-width: 425px){
+    .login_form-box input{
+        width: 70%;
+    }
+    .login_form-box{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .login_container{
+        width: 350px;
+    }
+}
+
+@media (min-width: 768px){
+    .login main{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-evenly
+    }
+    .login_video{
+        display: block;
+    }
+    .login_form-box input{
+        width: 70%;
+    }
+}
+
+@media (min-width: 1024px){
+    .login_video iframe{
+        width: 450px;
+        height: 340px;
+    }
+    .header_login a img {
+        width: 300px;
+    }
+
+}
