--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -7,16 +7,16 @@
     <script src="https://kit.fontawesome.com/c5fd8ed388.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Login</title>
 </head>
 
 <body class="login"
     style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
     <header class="header_login">
-        <img src="/images/logo.png" alt="">
+        <a href="/"><img src="/images/logo.png" alt=""></a>
     </header>
     <main>
-        <section class="container">
+        <section class="login_container">
             <div class="box_introduccion">
                 <div class="box_1">
                     <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
@@ -24,32 +24,37 @@
                 </div>
                 <div class="box_2">
                     <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
-                    <a href="/register" style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Registrate!</a>
+                    <a href="/register"
+                        style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Registrate!</a>
                 </div>
             </div>
             <h1>Login</h1>
             <form action="">
                 <article>
-                    <div class="register_form-box">
-                        <label for="user">Usuario</label>
-                        <input class="register_form-input" type="user" id="user" name="user"
-                            placeholder="Ingresa usuario">
-                    </div>
-                    <div class="register_form-box">
-                        <label for="password">Contraseña</label>
-                        <input class="register_form-input" type="password" id="password" name="password"
-                            placeholder="Ingresa tu contraseña">
-                    </div>
+                        <div class="login_form-box">
+                            <label for="user">Usuario</label>
+                            <input class="login_form-input" type="user" id="user" name="user"
+                                placeholder="Ingresa usuario">
+                        </div>
+                        <div class="login_form-box">
+                            <label for="password">Contraseña</label>
+                            <input class="login_form-input" type="password" id="password" name="password"
+                                placeholder="Ingresa tu contraseña">
+                        </div>
                 </article>
+                <div class="login_center">
+                    <div class="login_button">
+                        <button type="submit">Enviar</button>
+                    </div>
                 </div>
-                </div>
-                <div class="register_center">
-                <div class="register_button">
-                    <button type="submit">Enviar</button>
-                </div>
-            </div>
             </form>
+        </section>
+        <section>
+            <article class="login_video">
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </article>
         </section>
     </main>
 </body>
+
 </html>
