--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -29,18 +29,25 @@
                 </div>
             </div>
             <h1>Login</h1>
+            <div class="login_box-gf">
+                <div class="login_google">
+                    <button type="submit"><i class="fab fa-google-plus"></i>Unirse con Google</button>
+                </div>
+                <div class="login_facebook">
+                    <button type="submit"><i class="fab fa-facebook"></i></button>
+                </div>
+            </div>
             <form action="">
                 <article>
-                        <div class="login_form-box">
-                            <label for="user">Usuario</label>
-                            <input class="login_form-input" type="user" id="user" name="user"
-                                placeholder="Ingresa usuario">
-                        </div>
-                        <div class="login_form-box">
-                            <label for="password">Contraseña</label>
-                            <input class="login_form-input" type="password" id="password" name="password"
-                                placeholder="Ingresa tu contraseña">
-                        </div>
+                    <div class="login_form-box">
+                        <label for="user">Usuario</label>
+                        <input class="login_form-input" type="user" id="user" name="user" placeholder="Ingresa usuario">
+                    </div>
+                    <div class="login_form-box">
+                        <label for="password">Contraseña</label>
+                        <input class="login_form-input" type="password" id="password" name="password"
+                            placeholder="Ingresa tu contraseña">
+                    </div>
                 </article>
                 <div class="login_center">
                     <div class="login_button">
@@ -51,7 +58,10 @@
         </section>
         <section>
             <article class="login_video">
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/k5tsZzJsCuU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </article>
         </section>
     </main>
