--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -100,14 +100,16 @@
     border-radius: 10px;
     width: 160px;
     margin-right: 10px;
+    border: 1px solid green;
 }
 
 .login_facebook button{
     padding: 5px;
-    font-size: 25px;
+    font-size: 23px;
     background-color: var(--verdeclaro);
     border-radius: 10px;
     color: blue;
+    border: 1px solid green;
 }
 
 .login_google button i{
