--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -6,6 +6,15 @@
     margin-top: 60px;
 }
 
+.login_box_1 {
+    font-size: 12px;
+}
+
+.login_box_2 {
+    font-size: 10px;
+    text-align: end;
+}
+
 .login_video{
     display: none;
 }
@@ -130,6 +139,12 @@
     }
     .login_container{
         width: 350px;
+    }
+    .login_box_1{
+        font-size: 15px;
+    }
+    .login_box_2{
+        font-size: 12px;
     }
 }
 
