--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -18,11 +18,11 @@
     <main>
         <section class="login_container">
             <div class="box_introduccion">
-                <div class="box_1">
+                <div class="login_box_1">
                     <p style="text-shadow: 1px 1px 2px black;">Binvenido a </p>
                     <p style="color: rgb(102, 212, 102);text-shadow: 1px 1px 2px black;">ViveBio</p>
                 </div>
-                <div class="box_2">
+                <div class="login_box_2">
                     <p style="text-shadow: 1px 1px 2px black;">No tenés cuenta?</p>
                     <a href="/register"
                         style="color: rgb(102, 212, 102);text-shadow: 1px 1px 1px black;">Registrate!</a>
