--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -47,7 +47,7 @@
     width: 100%;
 }
 
-.register_form-input{
+.register_form-input {
     width: 100%;
     margin: 5px 0 5px;
     padding: 10px 5px;
@@ -56,33 +56,33 @@
 }
 
 
-.register h1{
+.register h1 {
     padding: 10px 0 10px;
     color: black;
     text-align: center;
     letter-spacing: 5px;
 }
 
-.register label{
+.register label {
     font-size: 10px;
     margin-left: 10px;
 }
 
-.register_center{
+.register_center {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.register_terminos{
+.register_terminos {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
 
 }
 
-.register_button{
+.register_button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,17 +90,29 @@
     margin-top: 10px;
 }
 
-.register_form-box:first-child{
+.register_form-box:first-child {
     margin-top: 0;
 }
 
-.register_button button{
+.register_button button {
     background-color: var(--verdeclaro);
     color: black;
     border-radius: 12px;
     padding: 5px 10px;
 }
 
-.register_terminos input{
+.register_terminos input {
     box-shadow: 0px 0px 10px rgb(89, 141, 78);
+}
+
+@media (min-width: 768px){
+    .header_register img{
+        width: 200px;
+    }   
+    .box_1{
+        font-size: 15px;
+    }
+    .box_2{
+        font-size: 12px;
+    }
 }
