--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -9,7 +9,7 @@
 
 
 .header__logo img{
-    width: 100%;
+    width: 200px;
 }
 
 
@@ -52,6 +52,7 @@ header .header__burger{
     display: none;
 }
 @media(min-width: 426px){
+
     .header{
         flex-direction: column;
         background-color: var(--transparencia);
@@ -66,6 +67,10 @@ header .header__burger{
     .header__logo{
         width: 25%;
         align-self: flex-start;
+    }
+    
+    .header__logo img{
+        width: 100%;
     }
 
     .header .logo{
