--- a/site_ViveBio/public/css/general.css
+++ b/site_ViveBio/public/css/general.css
@@ -31,6 +31,8 @@ h3{
 }
 
 body{
-   background-image: url(/images/background-mobile-home.png);
-   background-size: cover;
-}
+    background-image: url(/images/background-desktop-home.png);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+ }
