--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -37,7 +37,7 @@
             <div class="header__opciones">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/productDetail">Productos</a></li>
+                    <li><a href="/product">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
@@ -45,7 +45,7 @@
             <div class="header__iconos">
                 <a href="#"><img src="/images/configuracion.png" alt=""></a>
                 <a href="#"><img src="/images/campana.png" alt=""></a>
-                <a href="/productCart"><img src="/images/carrito.png" alt=""></a>
+                <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
                 <a href="#"><img src="/images/corazon.png" alt=""></a>
             </div>
         </nav>
@@ -139,7 +139,7 @@
         <div class="DatFooter">
             <ul class="direcciones__footer">
                 <li><a href="/">Home</a></li>
-                <li><a href="/productDetail">Productos</a></li>
+                <li><a href="/product">Productos</a></li>
                 <li><a href="#">Consejos</a></li>
                 <li><a href="#">Política de devolución</a></li>
             </ul>
