--- a/site_ViveBio/public/css/login.css
+++ b/site_ViveBio/public/css/login.css
@@ -15,7 +15,7 @@
     text-align: end;
 }
 
-.login_video{
+.login_video {
     display: none;
 }
 
@@ -29,7 +29,7 @@
     width: 150px;
 }
 
-.login h1{
+.login h1 {
     padding: 10px 0 10px;
     color: black;
     text-align: center;
@@ -83,15 +83,15 @@
     padding: 5px 10px;
 }
 
-.login label{
+.login label {
     font-size: 10px;
 }
 
-.login_form-box input{
+.login_form-box input {
     text-align: center;
 }
 
-.login_box-gf{
+.login_box-gf {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -99,7 +99,8 @@
     text-align: center;
     margin: 0 5px;
 }
-.login_google button{
+
+.login_google button {
     padding: 5px;
     font-size: 10px;
     background-color: var(--verdeclaro);
@@ -109,7 +110,7 @@
     border: 1px solid green;
 }
 
-.login_facebook button{
+.login_facebook button {
     padding: 5px;
     font-size: 23px;
     background-color: var(--verdeclaro);
@@ -118,52 +119,64 @@
     border: 1px solid green;
 }
 
-.login_google button i{
+.login button:hover {
+    transition: all 0.4s;
+    background-color: rgb(87, 187, 87);
+}
+
+.login_google button i {
     font-size: 30px;
     color: black;
     text-align: center;
 }
 
-@media (min-width: 425px){
-    .login_form-box input{
+@media (min-width: 425px) {
+    .login_form-box input {
         width: 70%;
     }
-    .login_form-box{
+
+    .login_form-box {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .login_container{
+
+    .login_container {
         width: 350px;
     }
-    .login_box_1{
+
+    .login_box_1 {
         font-size: 15px;
     }
-    .login_box_2{
+
+    .login_box_2 {
         font-size: 12px;
     }
 }
 
-@media (min-width: 768px){
-    .login main{
+@media (min-width: 768px) {
+    .login main {
         display: flex;
         flex-direction: row;
-        justify-content:space-evenly
+        justify-content: space-evenly
     }
-    .login_video{
+
+    .login_video {
         display: block;
     }
-    .login_form-box input{
+
+    .login_form-box input {
         width: 70%;
     }
 }
 
-@media (min-width: 1024px){
-    .login_video iframe{
+@media (min-width: 1024px) {
+    .login_video iframe {
         width: 450px;
         height: 340px;
     }
+
     .header_login a img {
         width: 250px;
     }
