--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -105,14 +105,25 @@
     box-shadow: 0px 0px 10px rgb(89, 141, 78);
 }
 
-@media (min-width: 768px){
-    .header_register img{
+.register button:hover {
+    transition: all 0.4s;
+    background-color: rgb(87, 187, 87);
+}
+
+@media (min-width: 768px) {
+    .header_register img {
         width: 200px;
-    }   
-    .box_1{
+    }
+
+    .box_1 {
         font-size: 15px;
     }
-    .box_2{
+
+    .box_2 {
         font-size: 12px;
+    }
+
+    .container {
+        width: 400px;
     }
 }
