--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -4,5 +4,7 @@
     --VerdeClaro-Opaco: rgba(208, 237, 202, 0.5);
     --GrisClaro: #C4C4C4;
     --trasparencia: rgba(0,0,0,0);
+    --verdeOscuro: #7FA794;
+    --VioletaOscuro: #383843;
 }
 
