--- a/site_ViveBio/views/index.html
+++ b/site_ViveBio/views/index.html
@@ -55,7 +55,7 @@
     </div>
     <main>
         <div class="subtitulo__home">
-            <h1>Productos En Oferta</h1>
+            <h1>Productos en Oferta</h1>
         </div>
         <section class="sect1">
             <article class="art__home">
@@ -116,21 +116,21 @@
             <article class="categorias__home">
                 <div class="corporal__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">Linea Corporal</a>
+                        <a href="">BioCorporal</a>
                     </div>
                 </div>
             </article>
             <article class="categorias__home">
                 <div class="capilar__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">Linea Capilar</a>
+                        <a href="">BioCapilar</a>
                     </div>
                 </div>
             </article>
             <article class="categorias__home" >
                 <div class="spa__home" id="cate">
                     <div class="barra__cate__home">
-                        <a href="">Spa</a>
+                        <a href="">BioSpa</a>
                     </div>
                 </div>
             </article>
