--- a/site_ViveBio/public/css/styles.css
+++ b/site_ViveBio/public/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Roboto:wght@300&display=swap');
 @import './variables.css';
 @import './general.css';
 @import './header.css';
