vesrión mobile ready

--- a/site_ViveBio/public/css/general.css
+++ b/site_ViveBio/public/css/general.css
@@ -13,3 +13,10 @@ a{
 li{
     list-style: none;
 }
+
+body {
+    background-image: url(/images/background-desktop-home.png);
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
