--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -52,46 +52,45 @@
     </header>
     </div>
     <main>
-            <nav>
-                <ul class="main__categorías">
-                       <button><li><a href="#">BioCorporal</a></li></button> 
-                        <li><a href="#">BioCapilar</a></li>
-                        <li><a href="#">Spa/Kit Regalos</a></li>
-                </ul>
-            </nav>
-            <a href="#">
+        <nav>
+            <ul class="main__categorías">
+                <li><a href="#">BioCorporal</a></li>
+                <li><a href="#">BioCapilar</a></li>
+                <li><a href="#">Spa/Kit Regalos</a></li>
+            </ul>
                 <h2> Jabón Antiséptico </h2>
-            </a>
-            <article class="main__contenedor-img-txt">
-                <a href=""> <img src="/images/jabon_antiseptico.jpg" alt=""></a>
-                <div class="main__texto">
-                    <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
-                            oleato de cedrón y caléndula. </span>Te aportan sus propiedades antibacterianas,
-                        antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
-                </div>
-        </article>
-        <a href="#">
-            <h2> Jabón Exfoliante </h2>
-        </a>
-        <article class="main__contenedor-img-txt">
-                <a href=""> <img src="/images/jabon_exfo.jpg" alt=""></a>
-                <div class="main__texto">
-                    <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
-                            oleato de cedrón y caléndula. </span>Te aportan sus propiedades antibacterianas,
-                        antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
-                </div>
-        </article>
-        <a href="#">
-            <h2> Jabón Humectante </h2>
-        </a>
-        <article class="main__contenedor-img-txt">
-                <a href=""> <img src="/images/jabonhum4.jpeg" alt=""></a>
-                <div class="main__texto">
-                    <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
-                            oleato de cedrón y caléndula. </span>Te aportan sus propiedades antibacterianas,
-                        antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
-                </div>
-        </article>
+                <article class="main__contenedor-img-txt">
+                    <div class="img">
+                        <a href=""> <img src="/images/jabon_antiseptico.jpg" alt=""></a>
+                    </div>
+                    <div class="main__texto">
+                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                                oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                    </div>
+                    <div class="main__info-inivisible">
+                        <a href="/images/corazon.png"></a>
+                        <a href="/images/carrito.png"></a>
+                    </div>
+                </article>
+                <h2> Jabón Exfoliante </h2>
+                <article class="main__contenedor-img-txt">
+                    <a href=""> <img src="/images/jabon_exfo.jpg" alt=""></a>
+                    <div class="main__texto">
+                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                                oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                    </div>
+                </article>
+                <h2> Jabón Humectante </h2>
+                <article class="main__contenedor-img-txt">
+                    <a href=""> <img src="/images/jabonhum4.jpeg" alt=""></a>
+                    <div class="main__texto">
+                        <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
+                                oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
+                            antiinflamatorias, analgésicas, refrescantes y tonificantes!</p>
+                    </div>
+                </article>
     </main>
     <footer class="footer">
         <div class="DatFooter">
