--- a/site_ViveBio/public/css/product.css
+++ b/site_ViveBio/public/css/product.css
@@ -1,76 +1,132 @@
-.product main{
-    width: 100%;
-    background-image: url('/images/background-mobile-home.png');
-    background-repeat: no-repeat;
-    background-position: absolute;
-    color: white;
-    backdrop-filter: sepia(90%);
-}
- 
-.product .main__categorías a{
-    color: white;
+.product main {
+  width: 100%;
+  color: white;
+  background-position: center center;
+  background-attachment: fixed;
 }
 
-.product .main__categorías button li a{
-    background-image: url('/images/tex.jpeg');
-    background-repeat: no-repeat;
-    width: 100%;
-    height:30%;
-    backdrop-filter: sepia(90%);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    border: 1px solid white;
-    font-weight: bold;
+.product nav {
+  width: 100%;
+}
+
+.product main__categorías ul {
+  width: 90%;
 }
 
 
-.product .main__categorías a:hover {
-    background-color: var(--verdeAmarillento);
-    
-  }
-
-.product .main__contenedor-img-txt{
-    display: flex;
-    flex-direction: row;
-    background-image: url();
-    background-repeat: no-repeat;
-    width: 100%;
-    margin: auto;
+.product .main__categorías {
+  color: white;
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-weight: bold;
+  border-radius: 8px;
+  font-size: 16px;
+  text-align: center;
+  padding: 10px 0;
+  margin-bottom: 30px;
 }
 
-.product .main__contenedor-img-txt:hover {
-opacity: 0.5;
-filter: alpha(opacity=100);
-zoom: 1;
+.product .main__categorías a {
+  color: white;
+  background-image: url('/images/tex.jpeg');
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid white;
+  font-weight: bold;
+  border-radius: 8px;
+  font-size: 16px;
+  padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-.product .main__contenedor-img-txt img{
-    width: 90%;
-    height: 100%;
-    align-items: center;
+
+.product .main__categorías li a:hover {
+  color: aquamarine;
+  border-radius: 8px;
 }
 
-.product .main__contenedor-img-txt p{
-    text-align: center;
-    background-image: url('/images/tex.jpeg');
-    background-repeat: no-repeat;
-    height: 100%;
+.product .main__contenedor-img-txt {
+  display: flex;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  width: 100%;
+  border-radius: 8px;
+}
+
+.product .main__texto:hover {
+  opacity: 0.3;
+  filter: alpha(opacity=100);
+  zoom: 1;
+  color: aquamarine;
+}
+
+.product main h2 {
+  background-image: url('/images/tex.jpeg');
+  background-repeat: no-repeat;
+  background-position: absolute;
+  color: white;
+  text-align: center;
+  margin: auto;
+  border-radius: 8px;
+  width: 90%;
+}
+
+
+.product .main__contenedor-img-txt img {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  margin-bottom: -3px;
+
+}
+
+.product .main__contenedor-img-txt .main__texto {
+  width: 100%;
+}
+
+.product .main__contenedor-img-txt p {
+  text-align: center;
+  background-image: url('/images/tex.jpeg');
+  background-repeat: no-repeat;
+  height: 100%;
+  padding: 10px;
+  border-radius: 0px 0 10px 10px;
+}
+
+.product p {
+  font-size: 12px;
+}
+
+.product p span {
+  font-size: 14px;
 }
 
 .product article {
-    padding: 40px;
+  padding: 40px;
 }
 
-@media (min-width: 460px){
-    .product .main__categorías{
-         display: column;
-         flex-direction: row;
-         justify-content: space-around;
-         border: 1px solid white;
-         font-weight: bold;
-    }
-    .product .main__contenedor-img-txt p{
-        padding-top: 50px;
-    }
+@media (min-width: 460px) {
+  .product .main__categorías {
+    display: column;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border: 1px solid white;
+    font-weight: bold;
+  }
+
+  .product p {
+    font-size: 16px;
+  }
+
+  .product p span {
+    font-size: 18px;
+  }
+
+  .product main h2 {
+    width: 400px;
+  }
 }
