Register&Login Terminados

--- a/site_ViveBio/views/login.html
+++ b/site_ViveBio/views/login.html
@@ -10,8 +10,7 @@
     <title>Login</title>
 </head>
 
-<body class="login"
-    style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
+<body class="login">
     <header class="header_login">
         <a href="/"><img src="/images/logo.png" alt=""></a>
     </header>
