--- a/site_ViveBio/views/register.html
+++ b/site_ViveBio/views/register.html
@@ -10,8 +10,7 @@
     <title>Register</title>
 </head>
 
-<body class="register"
-    style="background-image: url(/images/Fondo2.png);background-attachment: fixed;background-size: cover;background-position: center center;">
+<body class="register">
     <header class="header_register">
         <a href="/"><img src="/images/logo.png" alt=""></a>
     </header>
