--- a/site_ViveBio/public/css/header.css
+++ b/site_ViveBio/public/css/header.css
@@ -57,6 +57,7 @@
 .header__localizacion{
     display: none;
 }
+
 @media(min-width: 426px){
     .header{
         flex-direction: column;
@@ -224,4 +225,7 @@
         display: flex;
     }
     
+    .header a{
+        font-weight: bold;
+    }
 }
