--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -56,12 +56,13 @@
             <ul class="main__categorías">
                 <li><a href="#">BioCorporal</a></li>
                 <li><a href="#">BioCapilar</a></li>
-                <li><a href="#">Spa/Kit Regalos</a></li>
+                <li><a href="#">BioSpa</a></li>
             </ul>
+        </nav>
                 <h2> Jabón Antiséptico </h2>
                 <article class="main__contenedor-img-txt">
                     <div class="img">
-                        <a href=""> <img src="/images/jabon_antiseptico.jpg" alt=""></a>
+                        <a href=""> <img src="/images/jabones.jpg" alt=""></a>
                     </div>
                     <div class="main__texto">
                         <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
@@ -84,7 +85,7 @@
                 </article>
                 <h2> Jabón Humectante </h2>
                 <article class="main__contenedor-img-txt">
-                    <a href=""> <img src="/images/jabonhum4.jpeg" alt=""></a>
+                    <a href=""> <img src="/images/jabon_humectante.jpg" alt=""></a>
                     <div class="main__texto">
                         <p>Para ésta versión, combinamos <span style="font-weight: bold">aceite de menta, tea three,
                                 oleato de cedrón y caléndula.</span> Te aportan sus propiedades antibacterianas,
