--- a/site_ViveBio/public/css/home.css
+++ b/site_ViveBio/public/css/home.css
@@ -41,7 +41,15 @@ primera parte del main
 
 .home .sect1 .art__home .nombreart__home {
     text-align: center;
+    background-color: #7FA794;
+    border-radius: 19px;
+    width: 85%;
+    height: 30px;
+    margin: 10px auto;
+    display: flex;
+    /*coloco como un contenedor flex*/
     justify-content: center;
+    /*alineacion horizontal*/
     align-items: center;
     /*alineacion vertical*/
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
