--- a/site_ViveBio/views/productDetail.html
+++ b/site_ViveBio/views/productDetail.html
@@ -21,7 +21,7 @@
                 <img src="/images/Lupa.png" alt="" class="barra__lupa">
             </div>
             <div class="header__user">
-                <a>
+                <a href="/login">
                     <img src="/images/Usuario.png" alt="Usuario" class="icon__user">
                     <p>Usuario</p>
                 </a>
@@ -36,8 +36,8 @@
             </div>
             <div class="header__opciones">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Productos</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/product">Productos</a></li>
                     <li><a href="">Quienes somos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
@@ -45,11 +45,10 @@
             <div class="header__iconos">
                 <a href="#"><img src="/images/configuracion.png" alt=""></a>
                 <a href="#"><img src="/images/campana.png" alt=""></a>
-                <a href="#"><img src="/images/carrito.png" alt=""></a>
+                <a href="/carrito"><img src="/images/carrito.png" alt=""></a>
                 <a href="#"><img src="/images/corazon.png" alt=""></a>
             </div>
         </nav>
-        <img src="/images/menu-hamburgesa.png" alt="" class="header__menu">
     </header>
     </div>
     <main>
@@ -97,26 +96,19 @@
     <footer class="footer">
         <div class="DatFooter">
             <ul class="direcciones__footer">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Productos</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/product">Productos</a></li>
                 <li><a href="#">Consejos</a></li>
                 <li><a href="#">Política de devolución</a></li>
             </ul>
             <div class="contacto__footer">
                 <h3>Contactanos</h3>
                 <ul class="redes__footer">
-                    <a href="#">
-                        <li><img src="/images/linkedln.png" alt=""></li>
-                    </a>
-                    <a href="#">
-                        <li><img src="/images/twitter.png" alt=""></li>
-                    </a>
-                    <a href="#">
-                        <li><img src="/images/Facebook.png" alt=""></li>
-                    </a>
-                    <a href="#">
-                        <li><img src="/images/Instagram.png" alt=""></li>
-                    </a>
+
+                    <li><a href="#"><img class="footer__img-redes" src="/images/linkedln.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/twitter.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Facebook.png" alt=""></li></a>
+                    <li><a href="#"><img class="footer__img-redes" src="/images/Instagram.png" alt=""></li></a>
                 </ul>
             </div>
         </div>
