productos relacionados terminado

--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,124 +49,39 @@
     <div class="carrusel__home">
     </div>
     <main>
-      <div class="uk-flex uk-flex-middle uk-flex-center uk-child-width-1-1 uk-padding-small" uk-grid>
-        <div>
-          <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
-          <div class="uk-card-media-left uk-cover-container">
-              <div class="uk-width-1-1 blur-container uk-padding">
-                <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <h4>
-                    Mujer
-                    </h4>
-                  </div>
-                  <div>
-                    <a class="btn btn-small btn-primary" href="https://kimodo.es/177-ropa-de-mujer">Ver todo</a>
-                  </div>
-              </div>
-                </div>
-              <img class="card-image-left" loading="lazy" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Slider/slide_gMBkkTZuUVV.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644257577379" alt="" uk-cover>
-              <canvas width="600" height="400"></canvas>
-          </div>
-          <div>
-              <div class="uk-card-body">
-                  <h5>Lo más destacado 😍</h5>
-                  <ul class="uk-list uk-list-divider">
-          <li>
-            <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <img class="uk-border-circle" width="40" height="40" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Categories/tshirt_71N4vV9Zj74.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644495819398">
-                    Camisetas sostenibles
-                  </div>
-                  <div>
-                    <a href="https://kimodo.es/75-camisetas-y-polos">Ver</a>
-                  </div>
-              </div>
-          </li>
-          <li>
-             <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <img class="uk-border-circle" width="40" height="40" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Categories/bolso_ZCH8dRezn.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644495819229">
-                    Bolsos y mochilas
-                  </div>
-                  <div>
-                    <a href="https://kimodo.es/244-bolsos">Ver</a>
-                  </div>
-              </div>
-          </li>
-          <li>
-             <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <img class="uk-border-circle" width="40" height="40" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Categories/jeans_YRASelxBo.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644495819280">
-                    Jeans éticos
-                  </div>
-                  <div>
-                    <a href="https://kimodo.es/137-jeans-y-pantalones">Ver</a>
-                  </div>
-              </div>
-          </li>
-          <li>
-             <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <img class="uk-border-circle" width="40" height="40" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Categories/sudadera_RoXedCV8R.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644495819246">
-                    Sudaderas eco
-                  </div>
-                  <div>
-                    <a href="https://kimodo.es/76-jersey-y-sudaderas">Ver</a>
-                  </div>
-              </div>
-          </li>
-      </ul>
-              </div>
-          </div>
-      </div>
-        </div>
-        <div>
-          <div class="uk-flex uk-flex-middle uk-flex-center uk-child-width-1-2@s" uk-grid>
-            <div>
-               <div class="uk-card uk-card-default">
-                  <div class="uk-card-media-top">
-                      <img class="card-image-top" loading="lazy" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Slider/third-slide_u-RkEDF8d.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644257577417" alt="">
-                  </div>
-                  <div class="uk-card-body">
-                      <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <h4>
-                    Hombre
-                    </h4>
-                  </div>
-                  <div>
-                    <a class="btn btn-small btn-secondary" href="https://kimodo.es/185-ropa-de-hombre">Ver todo</a>
-                  </div>
-              </div>
-                    <p>Encuentra ropa sostenible para hombre con descuentos de hasta el 90% en tus marcas y colecciones favoritas</p>
-                  </div>
-              </div>
+      <section class="row">
+          <div class="card estilo-c">
+            <a href="#">
+            <div class="img-container">
+              <img src="/images/jabon_humectante_2.jpg" alt="producto">
             </div>
-            <div>
-               <div class="uk-card uk-card-default">
-                  <div class="uk-card-media-top">
-                      <img class="card-image-top" loading="lazy" src="https://ik.imagekit.io/pftkogwkc5j/Kimodo/Slider/fourth-slide_ZZuFprbdE.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1644257577343" alt="">
-                  </div>
-                  <div class="uk-card-body">
-                      <div class="uk-grid-small uk-flex-middle uk-flex-between" uk-grid>
-                  <div class="uk-width-auto">
-                      <h4>
-                    Infantil
-                    </h4>
-                  </div>
-                  <div>
-                    <a class="btn btn-small btn-secondary" href="https://kimodo.es/12-infantil-juvenil">Ver todo</a>
-                  </div>
-              </div>
-                    <p>Encuentra ropa sostenible para hombre con descuentos de hasta el 90% en tus marcas y colecciones favoritas</p>
-                  </div>
-              </div>
-            </div>
-      
-          </div>
+          <h2> Jabón Humectante</h2>
+          <h4>BioCorporal</h4>
+          <h3>$ 300.00.-</h3>
+        </a>
         </div>
-      </div>
+          <div class="card estilo-c">
+            <a href="#">
+            <div class="img-container">
+              <img src="/images/jabon_humectante_2.jpg" alt="producto">
+            </div>
+          <h2> Kit Exfoliante </h2>
+          <h4>BioSpa<h4>
+          <h3>$ 600.00.-</h3>
+        </a>
+        </div>
+          <div class="card estilo-c">
+            <a href="#">
+            <div class="img-container">
+              <img src="/images/shampoo2en1-geranio.png" alt="producto">
+            </div>
+          <h2> Shampoo-Acondicionador Geranio</h2>
+          <h4>BioCapilar</h4>
+          <h3>$ 300.00.-</h3>
+        </a>
+        </div>
+      </section>
+
     </main>
     <footer class="footer">
         <div class="DatFooter">
