--- a/site_ViveBio/views/productCard.html
+++ b/site_ViveBio/views/productCard.html
@@ -49,39 +49,49 @@
     <div class="carrusel__home">
     </div>
     <main>
+      
+      <h2 class="productosRelacionados">Productos Relacionados<h2>
       <section class="row">
           <div class="card estilo-c">
             <a href="#">
             <div class="img-container">
               <img src="/images/jabon_humectante_2.jpg" alt="producto">
+              <span class="promo">10% off</span>
             </div>
+          </a>
           <h2> Jabón Humectante</h2>
           <h4>BioCorporal</h4>
           <h3>$ 300.00.-</h3>
-        </a>
+          <span class="rating">⭐⭐⭐⭐⭐</span>
+          <a href="#" class="add-cart">Lo quiero!🤩</a>
         </div>
           <div class="card estilo-c">
             <a href="#">
             <div class="img-container">
               <img src="/images/jabon_humectante_2.jpg" alt="producto">
+              <span class="promo">25% off</span>
             </div>
+          </a>
           <h2> Kit Exfoliante </h2>
           <h4>BioSpa<h4>
           <h3>$ 600.00.-</h3>
-        </a>
+          <span class="rating">⭐⭐⭐⭐</span>
+          <a href="#" class="add-cart">Lo quiero!🤩</a>
         </div>
           <div class="card estilo-c">
             <a href="#">
             <div class="img-container">
               <img src="/images/shampoo2en1-geranio.png" alt="producto">
+              <span class="promo">15% off</span>
             </div>
+          </a>
           <h2> Shampoo-Acondicionador Geranio</h2>
           <h4>BioCapilar</h4>
           <h3>$ 300.00.-</h3>
-        </a>
+          <span class="rating">⭐⭐⭐⭐</span>
+          <a href="#" class="add-cart">Lo quiero!🤩</a>
         </div>
       </section>
-
     </main>
     <footer class="footer">
         <div class="DatFooter">
